# OSINT-Recon

./: README.md  pyproject.toml  reporte_ejemplo.md
src/osint_recon/: __init__.py  __main__.py  cache.py  cli.py  models.py
src/osint_recon/dorks/: generator.py
src/osint_recon/recon/: __init__.py  domain.py  email.py  username.py
src/osint_recon/report/: builder.py  scoring.py
tests/: test_domain.py  test_email.py  test_scoring.py  test_username.py
tests/fixtures/: crtsh_response.json  hibp_response.json
